fixed contrast error

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ li {
 
 #formats {
   margin-top: 0.5rem;
-  font-size: 120%;
+  font-size: 150%;
   font-weight: bold;
 	color: red;
 }
